# codeclimate-hlint

./: .codeclimate.yml  .dockerignore  .gitignore  Build.dockerfile  Dockerfile  Makefile  README.md  circle.yml  engine.cabal  main.hs  stack.yaml
src/CC/: Analyze.hs  Config.hs  Engine.hs  Result.hs
test/: example.hs
test/CC/: EngineSpec.hs
