name:                   engine
version:                0.0.0
author:                 Code Climate <hello@codeclimate.com>
maintainer:             Code Climate <hello@codeclimate.com>
license:                MIT
license-file:           LICENSE
cabal-version:          >= 1.10
build-type:             Simple

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -Werror
  exposed-modules:      CC.Config
                      , CC.Engine
                      , CC.Result
  build-depends:        base
                      , Glob
                      , aeson
                      , aeson
                      , bytestring
                      , containers
                      , directory
                      , haskell-src-exts
                      , hlint
                      , text

executable engine
  default-language:     Haskell2010
  main-is:              main.hs
  ghc-options:          -Wall -Werror
  build-depends:        base
                      , engine

source-repository head
  type:                 git
  location:             https://github.com/codeclimate/codeclimate-hlint
